[package]
name = "euler_250"
version = "0.1.0"
authors = ["Daniel Medani <dmedani@yelp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prime_tools = "0.1.3"
libmath = "0.1.4"
cache-macro = "0.4.1"
lru-cache = "0.1.2"